try to fix BG color missing on iPhone

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 
 .container {
   position: relative;
+  background-color: rgb(12, 12, 12);
 }
 
 .top-bar {
